Fix #32: Scrollbar doesn't work sometimes when left nav bar is open

--- a/src/WebClient/Layouts/LeftSideBarLayout.razor.css
+++ b/src/WebClient/Layouts/LeftSideBarLayout.razor.css
@@ -59,7 +59,11 @@
         display: flex !important;
     }
     .right {
+        display: none !important;
         margin-left: 0 !important;
+    }
+    .right.show {
+        display: flex !important;
     }
 
     ::deep .page-header {
